--- a/text/2-formulation-of-the-problem.tex
+++ b/text/2-formulation-of-the-problem.tex
@@ -1,1 +1,4 @@
 \section{Постановка задачи}
+	Математически сформулировать поставленную задачу можно так: \\
+	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Тогда обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Это так называемая вероятностная постановка задачи обучения \cite{Voron-ML, GAN}. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
+	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
