--- a/text/3-ann.tex
+++ b/text/3-ann.tex
@@ -1,4 +1,3 @@
 \section{Нейронные сети}
-\subsection{Общие сведения об ИНС}
-\subsection{Сверточные сети}
-\subsection{Архитектура GAN}
+	\subsection{Общие сведения об ИНС}
+	\subsection{Метод обратного распространения ошибки}
