--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -23,13 +23,24 @@
 	\input{2-formulation-of-the-problem}
 	% Нейронные сети
 	\input{3-ann}
+	% Сверточная арифметика, сверточные сети
+	\input{4-convolution}
+	% GAN
+	\input{5-GAN}
+	% Синтез текстур
+	\input{6-texture-synthesis}
+	% Adam
+	\input{7-optimizer}
+	% TR-MSE
+	\input{8-verification}
 	% Результаты
-	\input{4-results}
+	\input{9-results}
 	\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 	% ЗАКЛЮЧЕНИЕ
-	\input{5-conclusion}
+	\input{10-conclusion}
 	\addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 	\begin{thebibliography}{99}
+		\bibitem{Voron-ML}  Воронцов К. В., "Математические методы обучения по прецедентам (теория обучения машин)".
 		\bibitem{algorithm-of-articsic-style} Leon A. Gatys, Alexander S. Ecker, Matthias Bethge, ``A Neural Algorithm of Artistic Style'', arXiv: 1508.06576v2 [cs.CV], 2015
 		\bibitem{cGAN} Mehdi Mirza, Simon Osindero, ``Conditional Generative Adversarial Nets'', arXiv: 1411.1784v1 [cs.LG], 2014
 		\bibitem{cond-image-gen-pixelCNN} A\"aron van den Oord, Nal Kalchbrenner, Oriol Vinyals, Lasse Espeholt, Alex Graves, Koray Kavukcuoglu, ``Conditional Image Generation with PixelCNN Decoders'', arXiv: 1606.05328v2 [cs.CV], 2016
@@ -41,5 +52,5 @@
 		\bibitem{texture-networks} Dmitry Ulyanov, Vadim Lebedev, Andrea Vedaldi, Victor Lempitsky, ``Texture Networks: Feed-forward Synthesis of Textures and Stylized Images'', arXiv: 1603.03417v1 [cs.CV], 2016
 	\end{thebibliography}
 	\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ}
-	\input{6-attachment}
+	\input{11-supplement}
 \end{document}
