--- a/text/2-formulation-of-the-problem.tex
+++ b/text/2-formulation-of-the-problem.tex
@@ -1,4 +1,19 @@
 \section{Постановка задачи}
-	Математически сформулировать поставленную задачу можно так: \\
-	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Тогда обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Это так называемая вероятностная постановка задачи обучения \cite{Voron-ML, GAN}. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
+	Математически сформулировать поставленную задачу можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN}.
+	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Тогда обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
+	
+	"Классический" статистический подход к решению подобного рода задач заключается в рассмотрении параметризированного семейства распределений вероятности и его подстройке на имеющихся данных:
+	\begin{itemize}
+		\item Вводится параметризированное семейство распределений вероятности $P_{\theta}(x)$
+		\item Параметры $\theta$ находятся из обучающей выборки:
+		$$ \mathcal{L}_{\theta}(D) = \prod_{x \in D} P_{\theta}(x) $$
+		$$ \theta^{*} = \underset{\theta}{\arg\max} \mathcal{L}_{\theta}(D)$$
+		\item Генерируется объект(изображение) из распределения $ P_{\theta^{*}}$
+	\end{itemize}
+	Этот подход приводит к проблемам:
+	\begin{itemize}
+		\item Пространство параметров $\theta$ может быть огромной размерности
+		\item Известной параметрической модели распределения может вообще не существовать
+	\end{itemize}
+	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искуственных нейронных сетей привели к существенному повышению качества генеративных моделей самого разнообразного типа. Собственно, наличие впечатляющих работ последних лет в этой области \textbf{*тут цитаты*} и мотивирует попытаться применить современные нейросетевые подходы в поставленной задаче.
