Trained nf32_cb_dropout with shuffle [tr7]

--- a/code/sand_p2p_gan.ipynb
+++ b/code/sand_p2p_gan.ipynb
@@ -68,8 +68,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train dataset: 100%|██████████| 6000/6000 [01:05<00:00, 91.55it/s] \n",
-      "Validation dataset: 100%|██████████| 316/316 [00:02<00:00, 136.80it/s]\n"
+      "Train dataset: 100%|██████████| 6000/6000 [01:05<00:00, 96.31it/s] \n",
+      "Validation dataset: 100%|██████████| 316/316 [00:02<00:00, 141.42it/s]\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
    "source": [
     "models_path = 'trained_models/sand'\n",
     "trend_num = 7\n",
-    "nn_name = 'nf32_cb_eta5_dropout'"
+    "nn_name = 'nf32_cb_dropout'"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "nf = 32\n",
     "f_gen = g_unet(nf)\n",
     "d = discriminator(nf)\n",
-    "p2p = pix2pix(f_gen, d, eta=5)\n",
+    "p2p = pix2pix(f_gen, d)\n",
     "#plot_p2p_models(models_path, trend_num, nn_name, f_gen, d, p2p)\n",
     "#tbCallback = create_tb_callback(models_path, trend_num, nn_name)"
    ]
@@ -144,10 +144,11 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/1\n",
-      "150/150 [==============================] - 136s - loss: 0.2867   \n",
+      "300/300 [==============================] - 228s - loss: 0.0844   \n",
       "Epoch 1/1\n",
-      "150/150 [==============================] - 148s - loss: 3.7491   \n",
+      "150/150 [==============================] - 128s - loss: 59.2731   \n",
       "\n",
+      "Dir already exist\n",
       "Models saved successfully\n"
      ]
     }
