ann chapter + code changes

--- a/text/2-formulation-of-the-problem.tex
+++ b/text/2-formulation-of-the-problem.tex
@@ -3,7 +3,7 @@
 	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Тогда обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
 	
-	"Классический" статистический подход к решению подобного рода задач заключается в рассмотрении параметризированного семейства распределений вероятности и его подстройке на имеющихся данных:
+	"Классический" статистический подход к решению подобного рода задач заключается в введении в рассмотрение параметризированного семейства распределений вероятности и его подстройке на имеющихся данных:
 	\begin{itemize}
 		\item Вводится параметризированное семейство распределений вероятности $P_{\theta}(x)$
 		\item Параметры $\theta$ находятся из обучающей выборки:
