--- a/text/7-optimizer.tex
+++ b/text/7-optimizer.tex
@@ -1,1 +1,3 @@
-\section{Метод стохастической оптимизации Adam}
+\section{Методы стохастической оптимизации}
+	\subsection{Adam}
+	\subsection{Nadam}
