--- a/text/11-supplement.tex
+++ b/text/11-supplement.tex
@@ -1,1 +1,7 @@
 \section*{\hfil ПРИЛОЖЕНИЕ \hfil}
+	\subsection*{Использованные версии программных пакетов}
+		\begin{itemize}
+			\item Python 3.6
+			\item Tensorflow 1.1.0
+			\item Keras 2.0.4
+		\end{itemize}
