--- a/text/9-results.tex
+++ b/text/9-results.tex
@@ -1,5 +1,5 @@
 \section{Результаты}
-	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью фреймворка для построения искуственных нейронных сетей Keras \cite{keras} и библиотеки для вычислений Tensorflow \cite{tf}.
+	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью фреймворка для построения искуственных нейронных сетей Keras \cite{keras}, который, в свою очередь, использует для расчетов библиотеку Tensorflow \cite{tf}.
 	\subsection{Данные}
 		Обучение проводилось на синтетических данных. 
 	\subsection{GAN}
