--- a/text/9-results.tex
+++ b/text/9-results.tex
@@ -1,6 +1,10 @@
 \section{Результаты}
-	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью фреймворка для построения искуственных нейронных сетей Keras \cite{keras}, который, в свою очередь, использует для расчетов библиотеку Tensorflow \cite{tf}.
-	\subsection{Данные}
-		Обучение проводилось на синтетических данных. 
-	\subsection{GAN}
-	\subsection{Синтез текстур}
+	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, который, в свою очередь, привлекает для расчетов библиотеку Tensorflow \cite{tf}. Обучение проводилось на синтетических данных. 
+	\subsection{Выборка с одним трендом}
+		Выборка состояла из 6000 обучающих изображений и 316 валидационных. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
+		тут формула
+		\subsubsection{GAN}
+		\subsubsection{Синтез текстур}
+	\subsection{Выборка с множеством трендов}
+		\subsubsection{GAN}
+		\subsubsection{Синтез текстур}
