Text style fixes

--- a/text/9-results.tex
+++ b/text/9-results.tex
@@ -2,7 +2,8 @@
 	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, который, в свою очередь, привлекает для расчетов библиотеку Tensorflow \cite{tf}. Обучение проводилось на синтетических данных. 
 	\subsection{Выборка с одним трендом}
 		Выборка состояла из 6000 обучающих изображений и 316 валидационных. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
-		тут формула
+		$$тут формула \lambda(x) = $$
+		тут картинки примеров из обучающей выборки
 		\subsubsection{GAN}
 		\subsubsection{Синтез текстур}
 	\subsection{Выборка с множеством трендов}
