--- a/text/0-title.tex
+++ b/text/0-title.tex
@@ -2,55 +2,42 @@
 	
 	% НАЧАЛО ТИТУЛЬНОГО ЛИСТА
 	\begin{center}
-		\footnotesize{ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ }\\ 
-		\footnotesize{УЧРЕЖДЕНИЕ ВЫСШЕГО ОБРАЗОВАНИЯ}\\
-		\small{«МОСКОВСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ}\\
-		\small{имени М.В.ЛОМОНОСОВА»}\\
+		\small{ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ}\\ 
+		УЧРЕЖДЕНИЕ ВЫСШЕГО ОБРАЗОВАНИЯ\\
+		«МОСКОВСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ\\
+		имени М.В.ЛОМОНОСОВА»\\
 		\hfill \break
-		\normalsize{ФИЗИЧЕСКИЙ ФАКУЛЬТЕТ}\\
+		%\normalsize{ФИЗИЧЕСКИЙ ФАКУЛЬТЕТ}\\
+		ФИЗИЧЕСКИЙ ФАКУЛЬТЕТ \\
 		\hfill \break
-		\normalsize{КАФЕДРА МАТЕМАТИЧЕСКОГО МОДЕЛИРОВАНИЯ И ИНФОРМАТИКИ}\\
-		\hfill \break
-		\hfill \break
-		\hfill \break
+		КАФЕДРА МАТЕМАТИЧЕСКОГО МОДЕЛИРОВАНИЯ И ИНФОРМАТИКИ\\
 		\hfill \break
 		\hfill \break
-		\normalsize{БАКАЛАВРСКАЯ РАБОТА}\\
 		\hfill \break
-		\large{\textbf{Нейросетевой синтез текстур с трендами}}\\
+		\hfill \break
+		БАКАЛАВРСКАЯ РАБОТА\\
+		\hfill \break
+		\textbf{НЕЙРОСЕТЕВОЙ СИНТЕЗ ТЕКСТУР С ТРЕНДАМИ}\\
 	\end{center}
 	
 	\hfill \break
 
 	\begin{flushright}
 		Выполнил студент \\
-		\hfill \break
 		435 группы:\\
-		\hfill \break
 		Будакян Я. С.\\
-		\hfill \break
 		\underline{\hspace{3cm}}\\
 		\hfill \break
-		\hfill \break
 		Научный руководитель: \\
-		\hfill \break
 		к.т.н., доц. Грачев Е. А.\\
-		\hfill \break
 		\underline{\hspace{3cm}}
 	\end{flushright}
 	
+	\begin{flushleft}
+		Допущена к защите\\
+		Зав. кафедрой \underline{\hspace{3cm}}\\
+	\end{flushleft}
 	\hfill \break
-	\hfill \break
-	\hfill \break
-	
-	Допущена к защите\\
-	
-	Зав. кафедрой \underline{\hspace{3cm}}\\
-	
-	\hfill \break
-	\hfill \break
-	\hfill \break
-	
 	\begin{center}
 		Москва \\
 		\hfill \break
