Only text changes

--- a/text/0-title.tex
+++ b/text/0-title.tex
@@ -7,7 +7,6 @@
 		«МОСКОВСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ\\
 		имени М.В.ЛОМОНОСОВА»\\
 		\hfill \break
-		%\normalsize{ФИЗИЧЕСКИЙ ФАКУЛЬТЕТ}\\
 		ФИЗИЧЕСКИЙ ФАКУЛЬТЕТ \\
 		\hfill \break
 		КАФЕДРА МАТЕМАТИЧЕСКОГО МОДЕЛИРОВАНИЯ И ИНФОРМАТИКИ\\
@@ -17,7 +16,7 @@
 		\hfill \break
 		БАКАЛАВРСКАЯ РАБОТА\\
 		\hfill \break
-		\textbf{НЕЙРОСЕТЕВОЙ СИНТЕЗ ТЕКСТУР С ТРЕНДАМИ}\\
+		\textbf{<<НЕЙРОСЕТЕВОЙ СИНТЕЗ ТЕКСТУР С ТРЕНДАМИ>>}\\
 	\end{center}
 	
 	\hfill \break
