--- a/text/4-convolution.tex
+++ b/text/4-convolution.tex
@@ -1,3 +1,4 @@
 \section{Сверточные нейронные сети}
+	Сверточные нейронные сети - это специальная архитектура нейронной сети, нацеленная на эффективное распознавание изображений, впервые предложенная Яном Лекуном \cite{CNN-original}. Структура такой сети имеет некоторое сходство со строением зрительной коры головного мозга.
 	\subsection{Сверточная арифметика}
 	\subsection{Сверточные слои}
