--- a/text/9-results.tex
+++ b/text/9-results.tex
@@ -1,5 +1,5 @@
 \section{Результаты}
-	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, который, в свою очередь, привлекает для расчетов библиотеку Tensorflow \cite{tf}. Обучение проводилось на синтетических данных. 
+	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, который, в свою очередь, привлекает для расчетов библиотеку Tensorflow \cite{tf}. Использованные версии программных пакетов указаны в Приложении 1. Обучение проводилось на синтетических данных, сгенерированных самостоятельно разработанным генератором. 
 	\subsection{Выборка с одним трендом}
 		Выборка состояла из 6000 обучающих изображений и 316 валидационных. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
 		$$тут формула \lambda(x) = $$
