--- a/text/1-introduction.tex
+++ b/text/1-introduction.tex
@@ -1,3 +1,3 @@
 \newpage
 \section*{\hfil ВВЕДЕНИЕ \hfil}
-	Здесь, по идее, должно быть общее описание задачи, актуальность и все такое.
+	Здесь, по идее, должно быть общее описание задачи, актуальность и все такое. ага
