--- a/text/2-formulation-of-the-problem.tex
+++ b/text/2-formulation-of-the-problem.tex
@@ -1,9 +1,9 @@
 \section{Постановка задачи}
-	Математически сформулировать поставленную задачу можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN}.
-	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Тогда обучающая выборка изображений с трендами $D = \{x_i\}$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
+	Математически сформулировать постановку описанной задачи можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN}.
+	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Пусть у нас есть обучающая выборка изображений, содержащая в себе только изображения с трендами $D = \{x_i\}$. Тогда считается, обучающая выборка изображений с трендами $D$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Таким образом, с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
 	
-	"Классический" статистический подход к решению подобного рода задач заключается в введении в рассмотрение параметризированного семейства распределений вероятности и его подстройке на имеющихся данных:
+	"Классический" статистический подход к решению подобного рода задач заключается в введении в рассмотрение параметризированного семейства распределений вероятности и его подстройке к имеющимся данным:
 	\begin{itemize}
 		\item Вводится параметризированное семейство распределений вероятности $P_{\theta}(x)$
 		\item Параметры $\theta$ находятся из обучающей выборки:
@@ -16,4 +16,4 @@
 		\item Пространство параметров $\theta$ может быть огромной размерности
 		\item Известной параметрической модели распределения может вообще не существовать
 	\end{itemize}
-	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искуственных нейронных сетей привели к существенному повышению качества генеративных моделей самого разнообразного типа. Собственно, наличие впечатляющих работ последних лет в этой области \textbf{*тут цитаты*} и мотивирует попытаться применить современные нейросетевые подходы в поставленной задаче.
+	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искуственных нейронных сетей привели к существенному улучшению качества генеративных моделей самого разнообразного типа. Наличие впечатляющих работ последних лет в этой области \cite{cGAN, cGAN-face, BEGAN, EBGAN, texture-networks} мотивирует попытку применения современных нейросетевых подходов в поставленной задаче.
