--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -5,17 +5,18 @@
 \usepackage{amssymb,amsmath,mathtext}
 \usepackage{indentfirst,amsfonts}
 \usepackage[english, russian]{babel}
-\usepackage{setspace,amsmath}
+\usepackage{setspace}
 \usepackage{graphicx}
+\usepackage{pscyr}
 \usepackage[left=30mm, top=20mm, right=10mm, bottom=20mm, nohead, footskip=10mm]{geometry} % настройки полей документа
-
 \graphicspath{{graphs/}}
 \onehalfspacing
+\renewcommand{\rmdefault}{ftm} % Times New Roman
+\renewcommand\refname{\centering СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \begin{document}
-	\renewcommand\refname{\centering СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
-	%титульный лист
+	%Титульный лист
 	\input{0-title}
-	%учитываем титульный лист в нумерации
+	%Учет титульного листа в нумерации
 	\setcounter{page}{2}
 	\tableofcontents
 	\addcontentsline{toc}{section}{ВВЕДЕНИЕ}
@@ -31,43 +32,37 @@
 	\input{5-GAN}
 	% Синтез текстур
 	\input{6-texture-synthesis}
-	% Adam
+	% Стохастическая оптимизация
 	\input{7-optimizer}
 	% TR-MSE
 	\input{8-verification}
 	% Результаты
 	\input{9-results}
+	\addcontentsline{toc}{section}{ВЫВОДЫ}
+	% ВЫВОДЫ
+	\input{10-conclusions}
 	\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 	% ЗАКЛЮЧЕНИЕ
-	\input{10-conclusion}
+	\input{11-conclusion}
 	\addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 	\begin{thebibliography}{99}
-		\bibitem{Voron-ML}  Воронцов К. В., "Математические методы обучения по прецедентам (теория обучения машин)".
-		\bibitem{GAN} Ian J. Goodfellow, Jean Pouget-Abadie, Mehdi Mirza, Bign Xu, David Warde-Farley, Sherjil Ozair, Aaron Courville, Yoshua Bengio, "Generative Adversarial Nets" // arXiv: 1406.2661 [stat.ML], 2014.
-		\bibitem{algorithm-of-articsic-style} Leon A. Gatys, Alexander S. Ecker, Matthias Bethge, "A Neural Algorithm of Artistic Style" // arXiv: 1508.06576 [cs.CV], 2015.
-		\bibitem{cGAN-face} Jon Gauthier, "Conditional generative adversarial nets for convolutional face generation", Tech. rep., 2015.
-		\bibitem{cGAN} Mehdi Mirza, Simon Osindero, "Conditional Generative Adversarial Nets" // arXiv: 1411.1784 [cs.LG], 2014.
-		\bibitem{p2p} Pedro Costa, Adrian Galdran, Maria Inês Meyer, Michael David Abràmoff, Meindert Niemeijer, Ana Maria Mendonça, Aurélio Campilho, "Towards Adversarial Retinal Image Synthesis" // arXiv: 1701.08974 [cs.CV], 2017.
-		\bibitem{cond-image-gen-pixelCNN} A\"aron van den Oord, Nal Kalchbrenner, Oriol Vinyals, Lasse Espeholt, Alex Graves, Koray Kavukcuoglu, "Conditional Image Generation with PixelCNN Decoders" // arXiv: 1606.05328 [cs.CV], 2016.
-		\bibitem{cond-image-synth-with-clf-GANs} Augustus Odena, Christopher Olah, Jonathon Shlens, "Conditional Image Synthesis with Auxiliary Classifier GANs" // arXiv: 1610.09585 [stat.ML], 2016.
-		\bibitem{DC-IGN} Tejas D. Kulkarni, Will Whitney, Pushmeet Kohli, Joshua B. Tenenbaum, "Deep Convolutional Inverse Graphics Network" // arXiv: 1503.03167 [cs.CV], 2015.
-		\bibitem{EBGAN} Junbo Zhao, Michael Mathien, Yann LeCun, "Energy-based Generative Adversarial Networks" // arXiv: 1609.03126 [cs.LG], 2016.
-		\bibitem{MRF-and-CNN-synthesis} Chuan Li, Michael Wand, "Combining Markov Random Fields and Convolutional Neural Networks for Image Synthesis" // arXiv: 1601.04589 [cs.CV], 2016.
-		\bibitem{texture-networks} Dmitry Ulyanov, Vadim Lebedev, Andrea Vedaldi, Victor Lempitsky, "Texture Networks: Feed-forward Synthesis of Textures and Stylized Images" // arXiv: 1603.03417 [cs.CV], 2016.
-		\bibitem{keras} François Chollet, Keras, 2015. Software available from github.com/fchollet/keras.
-		\bibitem{tf} Martín Abadi, Ashish Agarwal, Paul Barham, Eugene Brevdo,
-		Zhifeng Chen, Craig Citro, Greg S. Corrado, Andy Davis,
-		Jeffrey Dean, Matthieu Devin, Sanjay Ghemawat, Ian Goodfellow,
-		Andrew Harp, Geoffrey Irving, Michael Isard, Rafal Jozefowicz, Yangqing Jia,
-		Lukasz Kaiser, Manjunath Kudlur, Josh Levenberg, Dan Mané, Mike Schuster,
-		Rajat Monga, Sherry Moore, Derek Murray, Chris Olah, Jonathon Shlens,
-		Benoit Steiner, Ilya Sutskever, Kunal Talwar, Paul Tucker,
-		Vincent Vanhoucke, Vijay Vasudevan, Fernanda Viégas,
-		Oriol Vinyals, Pete Warden, Martin Wattenberg, Martin Wicke,
-		Yuan Yu, and Xiaoqiang Zheng,
-		TensorFlow: Large-scale machine learning on heterogeneous systems,
-		2015. Software available from tensorflow.org.
+		\bibitem{Voron-ML}  Воронцов К. В.: "Математические методы обучения по прецедентам (теория обучения машин)".
+		\bibitem{CNN-original} LeCun, Y., Boser, B., Denker, J.S., Henderson, D., Howard, R.E., Hubbard, W., Jackel, L.D.: "Backpropagation applied to handwritten zip code recognition" // Neural Comput. 1(4), 541–551, 1989.
+		\bibitem{BEGAN} David Berthelot, Thomas Schumm, Luke Metz: "BEGAN: Boundary Equilibrium Generative Adversarial Networks" // arXiv: 1703.10717 [cs.LG], 2017.
+		\bibitem{GAN-original} Ian J. Goodfellow, Jean Pouget-Abadie, Mehdi Mirza, Bign Xu, David Warde-Farley, Sherjil Ozair, Aaron Courville, Yoshua Bengio: "Generative Adversarial Nets" // arXiv: 1406.2661 [stat.ML], 2014.
+		\bibitem{algorithm-of-articsic-style} Leon A. Gatys, Alexander S. Ecker, Matthias Bethge: "A Neural Algorithm of Artistic Style" // arXiv: 1508.06576 [cs.CV], 2015.
+		\bibitem{cGAN-face} Jon Gauthier: "Conditional generative adversarial nets for convolutional face generation", Tech. rep., 2015.
+		\bibitem{cGAN} Mehdi Mirza, Simon Osindero: "Conditional Generative Adversarial Nets" // arXiv: 1411.1784 [cs.LG], 2014.
+		\bibitem{p2p} Pedro Costa, Adrian Galdran, Maria Inês Meyer, Michael David Abràmoff, Meindert Niemeijer, Ana Maria Mendonça, Aurélio Campilho: "Towards Adversarial Retinal Image Synthesis" // arXiv: 1701.08974 [cs.CV], 2017.
+		\bibitem{cond-image-gen-pixelCNN} A\"aron van den Oord, Nal Kalchbrenner, Oriol Vinyals, Lasse Espeholt, Alex Graves, Koray Kavukcuoglu: "Conditional Image Generation with PixelCNN Decoders" // arXiv: 1606.05328 [cs.CV], 2016.
+		\bibitem{cond-image-synth-with-clf-GANs} Augustus Odena, Christopher Olah, Jonathon Shlens: "Conditional Image Synthesis with Auxiliary Classifier GANs" // arXiv: 1610.09585 [stat.ML], 2016.
+		\bibitem{DC-IGN} Tejas D. Kulkarni, Will Whitney, Pushmeet Kohli, Joshua B. Tenenbaum: "Deep Convolutional Inverse Graphics Network" // arXiv: 1503.03167 [cs.CV], 2015.
+		\bibitem{EBGAN} Junbo Zhao, Michael Mathien, Yann LeCun: "Energy-based Generative Adversarial Networks" // arXiv: 1609.03126 [cs.LG], 2016.
+		\bibitem{MRF-and-CNN-synthesis} Chuan Li, Michael Wand: "Combining Markov Random Fields and Convolutional Neural Networks for Image Synthesis" // arXiv: 1601.04589 [cs.CV], 2016.
+		\bibitem{texture-networks} Dmitry Ulyanov, Vadim Lebedev, Andrea Vedaldi, Victor Lempitsky: "Texture Networks: Feed-forward Synthesis of Textures and Stylized Images" // arXiv: 1603.03417 [cs.CV], 2016.
+		\bibitem{keras} François Chollet: Keras, 2015. Software available from http://keras.io/.
+		\bibitem{tf} Martín Abadi, Ashish Agarwal, Paul Barham, Eugene Brevdo, Zhifeng Chen, Craig Citro, Greg S. Corrado, Andy Davis, Jeffrey Dean, Matthieu Devin, Sanjay Ghemawat, Ian Goodfellow, Andrew Harp, Geoffrey Irving, Michael Isard, Rafal Jozefowicz, Yangqing Jia, Lukasz Kaiser, Manjunath Kudlur, Josh Levenberg, Dan Mané, Mike Schuster, Rajat Monga, Sherry Moore, Derek Murray, Chris Olah, Jonathon Shlens, Benoit Steiner, Ilya Sutskever, Kunal Talwar, Paul Tucker, Vincent Vanhoucke, Vijay Vasudevan, Fernanda Viégas, Oriol Vinyals, Pete Warden, Martin Wattenberg, Martin Wicke, Yuan Yu, and Xiaoqiang Zheng: "TensorFlow: Large-scale machine learning on heterogeneous systems", 2015. Software available from http://tensorflow.org/.
 	\end{thebibliography}
 	\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ}
-	\input{11-supplement}
+	\input{12-supplement}
 \end{document}
