--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -60,6 +60,7 @@
 		\bibitem{EBGAN} Junbo Zhao, Michael Mathien, Yann LeCun: "Energy-based Generative Adversarial Networks" // arXiv: 1609.03126 [cs.LG], 2016.
 		\bibitem{MRF-and-CNN-synthesis} Chuan Li, Michael Wand: "Combining Markov Random Fields and Convolutional Neural Networks for Image Synthesis" // arXiv: 1601.04589 [cs.CV], 2016.
 		\bibitem{texture-networks} Dmitry Ulyanov, Vadim Lebedev, Andrea Vedaldi, Victor Lempitsky: "Texture Networks: Feed-forward Synthesis of Textures and Stylized Images" // arXiv: 1603.03417 [cs.CV], 2016.
+		\bibitem{texture-synthesis-using-CNN} Leon A. Gatys, Alexander S. Ecker, Matthias Bethge: "Texture Synthesis Using Convolutional Neural Networks" // arXiv: 1505.07376 [cs.CV], 2015.
 		\bibitem{keras} François Chollet: Keras, 2015. Software available from http://keras.io/.
 		\bibitem{tf} Martín Abadi, Ashish Agarwal, Paul Barham, Eugene Brevdo, Zhifeng Chen, Craig Citro, Greg S. Corrado, Andy Davis, Jeffrey Dean, Matthieu Devin, Sanjay Ghemawat, Ian Goodfellow, Andrew Harp, Geoffrey Irving, Michael Isard, Rafal Jozefowicz, Yangqing Jia, Lukasz Kaiser, Manjunath Kudlur, Josh Levenberg, Dan Mané, Mike Schuster, Rajat Monga, Sherry Moore, Derek Murray, Chris Olah, Jonathon Shlens, Benoit Steiner, Ilya Sutskever, Kunal Talwar, Paul Tucker, Vincent Vanhoucke, Vijay Vasudevan, Fernanda Viégas, Oriol Vinyals, Pete Warden, Martin Wattenberg, Martin Wicke, Yuan Yu, and Xiaoqiang Zheng: "TensorFlow: Large-scale machine learning on heterogeneous systems", 2015. Software available from http://tensorflow.org/.
 	\end{thebibliography}
