Auto stash before merge of "master" and "origin/master"

--- a/text/5-GAN.tex
+++ b/text/5-GAN.tex
@@ -1,5 +1,5 @@
 \section{Генеративные состязательные сети}
-	Архитектура нейронной сети, получившая название генеративной состязательной сети (generative adversarial network - GAN), впервые была описана в 2014 году \cite{GAN}. В последние 2 года сети такого типа добились больших успехов в задачах синтеза объектов из сложных распределений (например, лиц) \cite{cGAN-face}, переноса стиля \cite{algorithm-of-articsic-style} и подобных. Этим объясняется мотивация попытки применения данной архитектуры для решения поставленной задачи.
+	Архитектура нейронной сети, получившая название генеративной состязательной сети (generative adversarial network - GAN), впервые была описана в 2014 году \cite{GAN-original}. В последние 2 года сети такого типа добились больших успехов в задачах синтеза объектов из сложных распределений (например, лиц) \cite{cGAN-face}, переноса стиля \cite{algorithm-of-articsic-style} и подобных. Этим объясняется мотивация попытки применения данной архитектуры для решения поставленной задачи.
 	\subsection{Общая структура}
 		Переформулируем изначальную задачу нахождения такой процеруды генерирования $X'$, чтобы $ P_{X'} \approx P_X$:
 		$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
@@ -36,10 +36,6 @@
 	\subsection{Обучение GAN}
 		Итак, задача обучения GAN свелась к нахождению
 		$$ \theta^* = \underset{\theta}{\arg\max} \left[ \underset{\zeta}{\min} L(\zeta, \theta) \right] $$
-		Решить ее можно, например, методом стохастического градиентного спуска:
-		$$ \Delta \theta \sim \nabla L(\zeta^*(\theta), \theta)$$
-		Для малых изменений $\Delta \theta$:
-		$$ \nabla L(\zeta^*(\theta), \theta) \approx \nabla L(\zeta^*(\theta), \theta + \Delta \theta) $$
 		В итоге, процесс обучения принимает следующий вид:
 		\begin{itemize}
 			\item Обучаем дискриминатор при фиксированном генераторе
@@ -51,7 +47,7 @@
 			\caption{Схематическое изображение процесса обучения GAN.}
 			\label{gan-training}
 		\end{figure}
-	\subsection{Различные модификации}
+	\subsection{Модификации}
 		\subsubsection{pix2pix GAN}
 			Для решения задачи было попробовано применить модификацию GAN-сети под названием "pix2pix GAN" \cite{p2p}. Ее отличие от схемы GAN, введенной выше, состоит в том, что вместо шума на вход генератору приходят другие изображения, на которых он основывается при синтезе. Схематически ее устройство изображено на (Рис. \ref{p2p}).
 			\begin{figure}
