nf64-metrics :(, text

--- a/text/2-formulation-of-the-problem.tex
+++ b/text/2-formulation-of-the-problem.tex
@@ -1,5 +1,5 @@
 \section{Постановка задачи}
-	Математически сформулировать постановку описанной задачи можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN}.
+	Математически сформулировать постановку описанной задачи можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN-original}.
 	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Пусть у нас есть обучающая выборка изображений, содержащая в себе только изображения с трендами $D = \{x_i\}$. Тогда считается, обучающая выборка изображений с трендами $D$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Таким образом, с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
 	
