--- a/text/6-optimizer.tex
+++ b/text/6-optimizer.tex
@@ -18,4 +18,4 @@
 		$$ \hat{m_t} = \frac{m_t}{1 - \beta_1^t} $$
 		$$ \hat{v_t} = \frac{v_t}{1 - \beta_2^t}$$
 		$$ \theta_{t+1} = \theta_t - \frac{\lambda \hat{m_t}}{\sqrt{v_t + \epsilon}} $$
-		Авторы статьи \cite{adam} пишут, что этот алгоритм достаточно устойчив к неоптимальному выбору параметров, поэтому часто в начале для обучения пробуют применить именно Adam.
+		Авторы статьи \cite{adam} пишут, что этот алгоритм достаточно устойчив к неоптимальному выбору параметров, поэтому во многих статьях в начале для обучения пробуют применить именно Adam.
