--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -17,8 +17,8 @@
 \graphicspath{{graphs/}}
 \onehalfspacing
 \renewcommand{\rmdefault}{ftm} % Times New Roman
-\renewcommand\refname{\centering СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 \addto\captionsrussian{\renewcommand{\contentsname}{\normalfont Содержание}}
+\addto\captionsrussian{\renewcommand{\refname}{\centering СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}}
 \allsectionsfont{\normalfont}
 \begin{document}
 	%Титульный лист
