--- a/text/1-introduction.tex
+++ b/text/1-introduction.tex
@@ -1,6 +1,6 @@
 \clearpage
 \section*{\hfil ВВЕДЕНИЕ \hfil}
-	В современной добыче полезных ископаемых активно применяются средства математического моделирования для симуляции процессов, происходящих в пласте. Однако, на данный момент полноценное моделирование не представляется возможным, поэтому используются различные приближенные методы. Для правильной симуляции процессов, происходящих в недрах, необходимо смоделировать саму среду, в которой эти процессы протекают. Обычно, данные о структуре среды доступны только в некотором количестве точек(скважин), в которых непосредственно идет добыча. Предлагается попытаться использовать методы машинного обучения для синтеза модели среды, похожей на природную. В рамках решения этой проблемы возникает задача синтеза текстур с трендами, например, для учета каких-либо пространственных корреляций. 
+	В современной добыче полезных ископаемых активно применяются средства математического моделирования для симуляции процессов, происходящих в пласте. Однако, на данный момент полноценное моделирование не представляется возможным, поэтому используются различные приближенные методы. Для правильной симуляции процессов, происходящих в недрах, необходимо смоделировать саму среду, в которой эти процессы протекают. Обычно, данные о структуре среды доступны только в некотором количестве точек (скважин), в которых непосредственно идет добыча. Предлагается попытаться использовать методы машинного обучения для синтеза модели среды, похожей на природную. В рамках решения этой проблемы возникает задача синтеза текстур с трендами, например, для учета каких-либо пространственных корреляций. 
 	
 	Под текстурой с трендом в данном случае понимается изображение, в котором есть изменение некоторой статистической характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или пористости среды.
 	
@@ -28,7 +28,7 @@
 	
 	Математически сформулировать постановку описанной задачи можно с помощью так называемой вероятностной постановки задачи обучения \cite{Voron-ML, GAN-original}.
 	
-	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Пусть у нас есть обучающая выборка из изображений, содержащих в себе рассматриваемое множество трендов $D = \{x_i\}$. Тогда считается, обучающая выборка изображений с трендами $D$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Таким образом, с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
+	Рассмотрим многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$. Пусть у нас есть обучающая выборка из изображений, содержащих в себе рассматриваемое множество трендов $D = \{x_i\}$. Тогда считается, что  обучающая выборка изображений с трендами $D$ задает в этом пространстве вероятностное распределение $P_X : X \longrightarrow [0,1]$, устроенное таким образом, что точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - низкую. Таким образом, с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $x'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 	$$ P_{X'} \approx P_X, \quad x' \sim X'$$
 	
 	``Классический'' статистический подход к решению подобного рода задач заключается в введении в рассмотрение параметризированного семейства распределений вероятности и его подстройке к имеющимся данным:
@@ -48,4 +48,4 @@
 		\item Известной параметрической модели распределения может вообще не существовать
 	\end{itemize}
 	
-	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искусственных нейронных сетей привели к существенному улучшению качества генеративных моделей самого разнообразного типа. В частности, впечатляющтие результаты были достигнуты с помощью генеративных состязательных сетей (GAN) \cite{cGAN, cGAN-face, EBGAN, BEGAN}, что мотивирует попытку применения нейросетей этой архитектуры в поставленной задаче.
+	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искусственных нейронных сетей привели к существенному улучшению качества генеративных моделей самого разнообразного типа. В частности, впечатляющие результаты были достигнуты с помощью генеративных состязательных сетей (GAN) \cite{cGAN, cGAN-face, EBGAN, BEGAN}, что мотивирует попытку применения нейросетей этой архитектуры в поставленной задаче.
